# cursor-hackathon-25

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DEPLOYMENT.md  CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_INDEX.md  DOCKER_SETUP_COMPLETE.md  FILLING_LIST_UPDATE.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  QUICKSTART_DOCKER.md  RAILWAY_QUICK_REFERENCE.md  README.md  docker-build.sh  docker-compose.yml  index.html  package-lock.json  package.json  start-dev.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
backend/.cursor/rules/: 00-backend-scope.md  01-python-conventions.md
backend/.cursor/skills/: README.md
backend/docs/: CLEANUP_SUMMARY.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEW_ENDPOINTS_SUMMARY.md  ORDERS_API.md  QUICK_START_SWAGGER.md  SWAGGER_DOCUMENTATION.md  SWAGGER_FEATURES.md
backend/src/backend/: config.py  database.py  logging_config.py  main.py
backend/src/backend/models/: __init__.py  order.py
backend/src/backend/openapi/: __init__.py  orders.py
backend/src/backend/routes/: api.py  health.py  orders.py
backend/src/backend/schemas/: __init__.py  order.py
backend/tests/: conftest.py  test_api.py  test_health.py  test_orders.py
docs/: architecture-and-integration.md  deployment.md  documentation-consolidation.md
frontend/: CURSOR_BUILD.md  Dockerfile  REFACTOR_SUMMARY.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
landing/: index.html  package-lock.json  (+1 more)
(+67 files in other folders)
